# test_itfox

./: .env.example  README.md  docker-compose.yml
app/: Dockerfile  pyproject.toml
app/core/: permissions.py
app/core/fixterus/: group.json  user.json
app/news/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
app/news/migrations/: 0001_initial.py
app/settings/: settings.py  urls.py
